Mon Jan  8 11:37:57 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (4.75): Use dotest, so we get a PASS if test passes.

	* sanity.sh (dotest): New argument OUTPUT2.
	(188a): Use it instead of \|.

	* sanity.sh (import): Avoid using string $ followed by Id followed
	by $ in sanity.sh source, in case sanity.sh itself is under CVS.
	I hate keyword expansion.

	* sanity.sh: If expr cannot handle multiline expressions, fail and
	tell the user to get one which can.

	* release.c (release_delete): Remove unused variable retcode.

Fri Jan  5 13:30:00 1996  Jim Kingdon   <kingdon@peary.cyclic.com>

	* release.c (release_delete): Call unlink_file_dir rather 
	than "rm -rf".

Thu Jan  4 09:58:30 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (find_fileproc): Print "nothing known about foo" and
	return 1 if the file doesn't exist and isn't in CVS/Entries.
	(commit): If the recursion over find_fileproc returns an error,
	print "correct above errors first!" just like local CVS.
	* sanity.sh (basica): Test for above-fixed bug.

	* release.c (release): If we are the client, only unedit if the
	server supports it.

	* sanity.sh: Remove STARTANCHOR stuff; expr patterns are
	automatically anchored to the start.  ENDANCHOR remains.

	* commit.c (commit): Don't start the server until we have
	determined that there is something to commit.

Thu Jan  4 09:48:33 1996  Ben Laurie  <ben@gonzo.ben.algroup.co.uk>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (start_server): dup the file descriptor before
	fdopening it.

Wed Jan  3 18:25:25 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Remove tests 5, 5.5, and 5.75.  All that stuff is
	tested elsewhere.

	* ignore.c (ign_default): Change CVS* to CVS CVS.adm.  CVS* is too
	broad, especially in a case-insensitive filesystem.

	* Makefile.in (cvsbug): version.c is in srcdir.

Wed Jan  3 17:30:45 1996  Phi-Long Tran  <ptran@autodesk.com>
